feat(homepage): add conditional rendering for non-Docker services

--- a/roles/homepage/handlers/main.yml
+++ b/roles/homepage/handlers/main.yml
@@ -2,4 +2,5 @@
 - name: restart homepage container
   community.docker.docker_container:
     name: homepage
-    state: restarted
+    state: started
+    restart: yes
