--- a/roles/babybuddy/tasks/main.yml
+++ b/roles/babybuddy/tasks/main.yml
@@ -48,6 +48,6 @@
             - homepage.group={{ services.babybuddy.group }}
             - homepage.name={{ services.babybuddy.name }}
             - homepage.href=https://bb.lan
-            # - "homepage.icon=home-assistant.png"
+            - homepage.icon=babybuddy
             - homepage.server={{ inventory_hostname }}
             - homepage.container=babybuddy
