--- a/roles/comfyui/defaults/main.yml
+++ b/roles/comfyui/defaults/main.yml
@@ -2,7 +2,6 @@
 # defaults file for comfyui
 comfyui_config_dir: /etc/comfyui # Static default config dir
 comfyui_storage_path: /opt/comfyui/storage # Static default storage path
-comfyui_image: yanwk/comfyui-boot:xpu
-comfyui_cli_args: --oneapi-device-selector=level_zero:0 --lowvram --disable-ipex-optimize --reserve-vram 2.5
-comfyui_container_name: comfyui-xpu
-comfyui_torch_version: 2.8.0.dev20250602+xpu
+comfyui_image: yanwk/comfyui-boot:cu124-slim
+comfyui_cli_args: ""
+comfyui_container_name: comfyui
