--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -38,11 +38,10 @@ ring_mqtt_rtsp_port: 8556
 open_webui_http_port: 3123
 comfyui_port: 8188
 ollama_port: 11434 # Default Ollama API port
-draw_things_port: 7859
 babybuddy_http_port: 8008
 sunshine_address: 192.168.50.33
 sunshine_http_port: 47990
-uid: 1000
+uid: 1000 # TODO move to host_vars
 username_personal: daniel
 uid_personal: 1001
 mount_root: mnt
