--- a/roles/comfyui/tasks/main.yml
+++ b/roles/comfyui/tasks/main.yml
@@ -1,24 +1,11 @@
----
-# tasks file for comfyui
-
 - name: Ensure ComfyUI storage directory exists
   ansible.builtin.file:
     path: "{{ comfyui_storage_path }}"
     state: directory
     mode: "0755"
-    owner: "1000"
-    group: "1000"
+    owner: "{{ uid }}"
+    group: "{{ gid }}"
     recurse: yes
-  become: true
-
-- name: Ensure ComfyUI data volume exists
-  community.docker.docker_volume:
-    name: comfyui-data
-    driver_options:
-      type: none
-      device: "{{ comfyui_storage_path }}"
-      o: "bind,uid=1000,gid=1000"
-    state: present
   become: true
 
 - name: Ensure ComfyUI container is running
@@ -27,6 +14,7 @@
     image: "{{ comfyui_image }}"
     pull: true
     state: started
+    user: "{{ comfyui_user }}"
     restart_policy: unless-stopped
     device_requests:
       - driver: nvidia
@@ -36,9 +24,10 @@
     ports:
       - "{{ comfyui_port }}:8188"
     volumes:
-      - comfyui-data:/root
+      - "{{ comfyui_storage_path }}:/root"
     env:
       CLI_ARGS: "{{ comfyui_cli_args }}"
+      HOME: "/root"
     labels:
       wud.tag.include: "^v\\d+\\.\\d+\\.\\d+$$"
       homepage.group: "{{ services.comfyui.group }}"
