feat(roles): Add draw_things_port variable and update container command

--- a/roles/draw_things/defaults/main.yml
+++ b/roles/draw_things/defaults/main.yml
@@ -4,3 +4,4 @@ draw_things_image: "drawthingsai/draw-things-grpc-server-cli:latest"
 draw_things_container_name: "draw_things"
 draw_things_models_path: "/opt/draw_things/models"
 draw_things_user: "{{ uid }}:{{ gid }}"
+draw_things_port: "7888"
