--- a/roles/netplan-static-ip/tasks/main.yml
+++ b/roles/netplan-static-ip/tasks/main.yml
@@ -35,6 +35,13 @@
   become: true
   when: cloud_init_installer_network_config.files | length > 0
 
+- name: Remove default cloud-init netplan config
+  ansible.builtin.file:
+    path: /etc/netplan/50-cloud-init.yaml
+    state: absent
+  become: true
+  notify: Apply Netplan Configuration
+
 - name: Configure static IP using netplan
   ansible.builtin.template:
     src: netplan-static.yaml.j2
