feat: add Proxmox integration with HTTPS proxy
- Add Proxmox DNS entry (proxmox.lan) to DNS configuration
- Addailab_proxmox_ip variable for dynamic IP resolution
- Add tls_skip: false to proxmox service for HTTPS proxying
- Implement special Caddy configuration for Proxmox HTTPS backend:
  - Uses reverse_proxy with https:// transport
  - Enables TLS server name verification
  - Skips TLS certificate verification for internal certs
  - Preserves client IP headers (X-Real-IP, X-Forwarded-For)
  - Maintains internal TLS termination at Caddy

This enables secure HTTPS proxying to Proxmox VE UI through
Caddy reverse proxy with proper header forwarding.

--- a/group_vars/all/dns.yml
+++ b/group_vars/all/dns.yml
@@ -2,3 +2,4 @@
 # Additional DNS entries not derived from inventory
 additional_dns_entries:
   router.lan: "{{ router_ip }}"
+  proxmox.lan: "{{ ailab_proxmox_ip }}"
