--- a/group_vars/all/config.yml
+++ b/group_vars/all/config.yml
@@ -16,6 +16,7 @@ homelab_nuc_ip: "{{ hostvars['homelab-nuc'].ansible_host }}"
 ailab_ip: "{{ hostvars['ailab'].ansible_host }}"
 ailab_mac_address: 50:eb:f6:82:3c:38 # MAC address for Wake-on-LAN
 ailab_ubuntu_ip: 192.168.50.10
+ailab_proxmox_ip: "{{ hostvars['ailab-proxmox'].ansible_host }}"
 micpi_ip: "{{ hostvars['micpi'].ansible_host }}"
 cidr: 192.168.50.0/24
 pihole_http_port: 81
@@ -103,3 +104,4 @@ linkding_domain_name: linkding.lan
 n8n_config_folder: "{{ config_root }}/n8n"
 teddycloud_config_folder: "{{ config_root }}/teddycloud"
 timemachine_max_size: 1000G
+google_workspace_mcp_port_host: 8014
